// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`back button absolute renders with absolute 1`] = `
<View
  style={
    Array [
      Object {
        "left": 5,
        "position": "absolute",
        "top": 25,
      },
      Object {
        "alignItems": "flex-start",
        "alignSelf": "flex-start",
        "justifyContent": "center",
      },
    ]
  }
>
  <IconButton
    name="backIcon"
    onPress={[Function]}
    type="MissionHub"
  />
</View>
`;

exports[`back button renders normally 1`] = `
<View
  style={
    Array [
      Object {},
      Object {
        "alignItems": "flex-start",
        "alignSelf": "flex-start",
        "justifyContent": "center",
      },
    ]
  }
>
  <IconButton
    name="backIcon"
    onPress={[Function]}
    type="MissionHub"
  />
</View>
`;
